prevent horizontal scrolling

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -10,7 +10,7 @@
   font-weight: bold;
   text-transform: uppercase;
   display: block;
-  margin: 0 auto $base-spacing;
+  margin: 0 auto $large-spacing;
   cursor: pointer;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   transition: $base-transition;
